Reconciled the card selections view on mobile with the tab view for desktop/mobile regarding card details. The issue was that I used the medium icon in the card selection tab on mobile. As a result, this icon was too big to fit in the template tab height, so I had enlarged the height of the tab with css. This made the icon look centered. However, the indicator stopped working with handlebars, so I used border-bottom to compensate. With the enlarged tab height, border-bottom only fit to the original tab height, making it look weird and overlapping with the icon. Since I will be able to change the image dimensions at will later on down the road, I decided to change the icon height to 3rem from 4rem in order to make it fit into the template tab css height and return the card selection tab to the template default. This could cause and issue if the rectangular cards don't look good in the default tab height. Problem for down the road.

--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -2648,7 +2648,7 @@ i.small {
 }
 
 i.medium {
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 i.large {
